Add rdoc documentation to the source code.  This gives some explanation of how to use the bindings to developers.  Also updated the README to tell how to build this documentation, and the TODO list to remove that task.

--- a/README
+++ b/README
@@ -19,3 +19,6 @@ To build it just for development, you'll want to:
 $ cd ext
 $ ruby extconf.rb
 $ make
+
+To build the documentation, make sure you have rdoc installed, and then:
+$ rdoc ext/ruby_krb5_auth.c
