A bunch more changes to get this ready for a 0.7 release.  Basically:
1)  Remove the gemspec file (now subsumed by the Rakefile)
2)  Add a Rakefile with a number of different targets for building
3)  Modify the SPEC file to use rake build instead of ruby ext/extconf.rb ; make
4)  Update the README to show how to use this new stuff.

--- a/README
+++ b/README
@@ -4,21 +4,18 @@ This is an implementation of Ruby bindings for the Kerberos library.
 
 To build a gem, you'll want to:
 
-$ gem build krb5-auth.gemspec
-# gem install krb5-auth-{VERSION}.gem
+$ rake gem
+$ sudo gem install pkg/krb5-auth-{VERSION}.gem
 
 To build an RPM, you'll want to:
 
-$ gem build krb5-auth.gemspec
-$ gem2rpm -s -t rubygem-krb5-auth.spec krb5-auth-{VERSION}.gem
-$ rpmbuild --rebuild rubygem-krb5-auth-{VERSION}-{RELEASE}.fc8.src.rpm
+$ rake rpm
+$ sudo rpm -Uvh pkg/{i386,x86_64}/rubygem-krb5-auth-{VERSION}.{i386,x86_64}.rpm
 
 and then install the resulting RPM.
 
 To build it just for development, you'll want to:
-$ cd ext
-$ ruby extconf.rb
-$ make
+$ rake build
 
 To build the documentation, make sure you have rdoc installed, and then:
-$ rdoc ext/ruby_krb5_auth.c
+$ rake rdoc
